--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Hello, Sportbet!</h1>
     <p>Welcome to our web server hosted on AWS.</p>
+    <h2>This is a text after deployment from Adi</h2>
 </body>
 </html>
 
