--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,8 @@
 <body>
     <h1>Hello, Sportbet!</h1>
     <p>Welcome to our web server hosted on AWS.</p>
-    <h2>This is a text after deployment from Adi</h2>
+    <h2>This is a text after manually deployment from Adi</h2>
+    <h3>This is a text after automatically deployment with github-actions</h3>
 </body>
 </html>
 
