--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <h1>Hello, Sportbet!</h1>
     <p>Welcome to our web server hosted on AWS.</p>
     <h2>This is a text after manually deployment from Adi</h2>
-    <h3>This is a text after automatically deployment with github-actions, should happen just if change come from Dockerfile or html folder</h3>
+    <h3>This is a text after automatically deployment with github-actions, we will share the image</h3>
 </body>
 </html>
 
