testing full ci/cd

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
     <p>Welcome to our web server hosted on AWS.</p>
     <h2>This is a text after manually deployment from Adi</h2>
     <h3>This is a text after automatically deployment with github-actions, I am checking now artifacts</h3>
+    <h4> This is a change for testing the full cicd </h4>
 </body>
 </html>
 
